Games-and-Apps.css
/* ... */
@media (max-width: 767px) {
  .u-section-1 .u-sheet-1 {
    min-height: 1558px;
  }

  .u-section-1 .u-text-1 {
    font-size: 3rem;
  }

  .u-section-1 .u-layout-cell-1 {
    min-height: 100px;
  }

  .u-section-1 .u-image-1 {
    height: 162px;
    width: 235px;
    margin-left: auto;
  }

  .u-section-1 .u-group-2 {
    min-height: 160px;
    width: 235px;
    margin-left: auto;
  }

  .u-section-1 .u-text-3 {
    font-size: 1.5rem;
    margin-left: 16px;
    margin-right: 16px;
  }

  .u-section-1 .u-text-4 {
    font-size: 1rem;
  }

  .u-section-1 .u-btn-1 {
    font-size: 0.875rem;
    padding: 12px 18px;
  }

  .u-section-1 .u-layout-cell-2 {
    min-height: 100px;
  }

  .u-section-1 .u-group-3 {
    min-height: 324px;
    width: 235px;
  }

  .u-section-1 .u-image-2 {
    height: 162px;
    width: 235px;
  }

  .u-section-1 .u-group-4 {
    min-height: 160px;
    width: auto;
    margin-right: initial;
    margin-left: initial;
  }

  .u-section-1 .u-text-5 {
    font-size: 1.5rem;
    margin-left: 16px;
    margin-right: 16px;
  }

  .u-section-1 .u-text-6 {
    font-size: 1rem;
  }

  .u-section-1 .u-btn-2 {
    font-size: 0.875rem;
    padding: 12px 18px;
  }

  .u-section-1 .u-layout-cell-3 {
    min-height: 100px;
  }

  .u-section-1 .u-group-5 {
    min-height: 324px;
    width: 235px;
  }

  .u-section-1 .u-image-3 {
    height: 162px;
    width: 235px;
  }

  .u-section-1 .u-group-6 {
    min-height: 160px;
    width: 235px;
    margin-left: auto;
    margin-right: auto;
  }

  .u-section-1 .u-text-7 {
    font-size: 1.5rem;
    margin-left: 16px;
    margin-right: 16px;
  }

  .u-section-1 .u-text-8 {
    font-size: 1rem;
  }

  .u-section-1 .u-btn-3 {
    font-size: 0.875rem;
    padding: 12px 18px;
  }

  .u-section-1 .u-layout-cell-4 {
    min-height: 100px;
  }

  .u-section-1 .u-group-7 {
    min-height: 324px;
    width: 235px;
  }

  .u-section-1 .u-image-4 {
    height: 162px;
    width: 235px;
    margin-top: 1px;
    margin-left: auto;
  }

  .u-section-1 .u-group-8 {
    min-height: 160px;
    width: auto;
    margin-right: initial;
    margin-left: initial;
  }

  .u-section-1 .u-container-layout-12 {
    padding-top: 0;
    padding-bottom: 0;
  }

  .u-section-1 .u-text-9 {
    font-size: 1.5rem;
    margin-left: 16px;
    margin-right: 16px;
  }

  .u-section-1 .u-text-10 {
    font-size: 1rem;
    width: 149px;
    margin-left: auto;
    margin-right: auto;
  }

  .u-section-1 .u-btn-4 {
    font-size: 0.875rem;
    padding: 12px 18px;
  }
}

@media (max-width: 575px) {
  .u-section-1 .u-sheet-1 {
    min-height: 1533px;
  }

  .u-section-1 .u-text-1 {
    width: auto;
    font-size: 2.25rem;
    margin-left: 0;
    margin-right: 0;
  }

  .u-section-1 .u-layout-cell-1 {
    min-height: 351px;
  }

  .u-section-1 .u-group-1 {
    min-height: 321px;
    width: auto;
    margin-right: initial;
    margin-left: initial;
  }

  .u-section-1 .u-group-2 {
    min-height: 155px;
  }

  .u-section-1 .u-text-4 {
    width: 180px;
    margin-left: auto;
    margin-right: auto;
  }

  .u-section-1 .u-layout-cell-2 {
    min-height: 221px;
  }

  .u-section-1 .u-group-3 {
    min-height: 331px;
  }

  .u-section-1 .u-image-2 {
    margin-top: 1px;
  }

  .u-section-1 .u-group-4 {
    min-height: 166px;
    width: auto;
    margin-right: initial;
    margin-left: initial;
  }

  .u-section-1 .u-text-6 {
    width: 180px;
    margin-left: auto;
    margin-right: auto;
  }

  .u-section-1 .u-layout-cell-3 {
    min-height: 247px;
  }

  .u-section-1 .u-group-5 {
    min-height: 318px;
  }

  .u-section-1 .u-group-6 {
    min-height: 155px;
    margin-top: 20px;
    margin-bottom: initial;
  }

  .u-section-1 .u-text-7 {
    margin-left: 0;
    margin-right: 0;
  }

  .u-section-1 .u-text-8 {
    width: 180px;
    margin-left: auto;
    margin-right: auto;
  }

  .u-section-1 .u-layout-cell-4 {
    min-height: 285px;
  }

  .u-section-1 .u-group-7 {
    min-height: 319px;
  }

  .u-section-1 .u-image-4 {
    margin-top: 0;
  }

  .u-section-1 .u-group-8 {
    min-height: 156px;
    margin-top: 20px;
    margin-bottom: initial;
    width: auto;
    margin-right: initial;
    margin-left: initial;
  }

  .u-section-1 .u-text-9 {
    margin-left: 9px;
    margin-right: 9px;
  }

  .u-section-1 .u-text-10 {
    width: auto;
    margin-left: 20px;
    margin-right: 20px;
  }
}.body {
	height: 90%;
}

